traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:30: error: not found: value False
  return False
         ^